styles.css
/* GlOBAL FORMATTING */

@font-face {
  font-family: VHS;
  src: url("./assets/Lucida-Grande-Bold.ttf");
}
@font-face {
  font-family: Lato;
  src: url("./assets/Lucida-Grande-Regular.ttf");
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "VHS";
}

.highlight {
  border-left: 10px solid white;
}

.site-container {
  display: grid;
  grid-template-columns: 1fr 1100px 1fr;
  grid-template-rows: 100px auto;
  /* background-color:rgba(0, 0, 255, 0.2); */
  background-color: black;
  z-index: 0;
  background-attachment: fixed;
  background-repeat: no-repeat;
}

.site-content {
  /* margin-top: 20px; */
  /* margin-bottom: 20px; */
  grid-column: 2/3;
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  /* border-top: solid black 4px;
  border-left: solid black 4px;
  border-right: solid black 4px;
  border-bottom: solid black 4px; */
}

.header-section {
  display: flex;
  align-items: center;
  justify-content: center;
  grid-column: 2/3;
}

.divider-section {
  background-color: black;
  height: 100px;
  width: 100%;
}
.logo-container {
  display: flex;
  align-items: center;
  justify-content: center;
  display: flex !important;
  grid-column: 1/3;
}
.logo {
  display: flex !important;
  align-items: center;
  justify-content: center;
  width: 500px;
  /* margin-bottom: 10px; */
  /* margin-top: 10px; */
}

.main-left {
  grid-column: 1/2;
  background: black !important;
  position: sticky;
  top: 0;
  left: 0;
  margin: 0px;
}

.main-right {
  grid-column: 2/3;
  display: flex;

  flex-direction: column;
  overflow-y: visible;

  background-repeat: no-repeat;
  /* background-attachment: fixed; */
  /* background: rgba(0, 0, 255, 0.7); */
  background-image: url("./assets/gradient-long.jpg");
  background-size: cover;
}

/* ABOUT SECTION */

.nav-links {
  position: sticky;
  top: 0; /* Stay at the top */
  left: 0;
  overflow-x: hidden;
  padding-top: 60px;
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

.nav-links a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 30px;
  color: #ffffff;
  text-shadow: 0px 0px 3px #333333;
  text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
    black -2px 0px 1px;

  display: block;
}

.about-section {
  padding: 30px 30px 0px 30px;
  margin: 0;
  width: auto;
  height: fit-content;
  align-items: center;
  justify-content: center;
  border: solid white 2px;
  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
    black -2px 0px 1px;
}

#main-img {
  width: 100%;
  height: auto;
  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
    black -2px 0px 1px;
}

.about-content {
  font-size: 16px;
  font-family: "Lato" !important;
  margin: 20px 0;
  color: white;
  letter-spacing: 2px;
  line-height: 28px;
}

#about-name {
  margin: 10px 0 15px 0;
  letter-spacing: 8px;
  font-size: 40px;
  padding-bottom: 15px;

  color: white;
  text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
    black -2px 0px 1px;
}

/* Audio Section */

.audio-section {
  padding: 20px 30px 30px 30px;
  margin: 0;
  width: auto;
  height: fit-content;
  border: solid white 2px;
  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
    black -2px 0px 1px;
}

#audio-header {
  margin: 10px 0 15px 0;
  letter-spacing: 8px;
  font-size: 40px;
  color: white;
  text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
    black -2px 0px 1px;
}

.audio-subtext {
  font-size: 18px;
  font-family: "Lato";
  margin: 20px 0;
  color: white;
  letter-spacing: 3px;
  line-height: 30px;
}

.album-grid {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
.album {
  align-items: center;
  justify-content: center;
  width: 50%;
  height: fit-content;
  margin-top: 30px;
  margin-bottom: 30px;
  display: flex;
  flex-direction: column;
  padding: 20px;
  /* border: 1px solid black; */
}

.album iframe {
  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
    black -2px 0px 1px;
  width: 250px;
  height: 250px;
  margin-bottom: 20px;
}

figcaption {
  color: white;
  font-size: 12px;
  margin-right: 5px;
  font-family: "Lato";
  text-align: right;
  font-style: italic;
  padding: 5px;
}

.album:hover {
  background: rgba(0, 0, 0, 0.4) !important;
  color: white;
  transition: 0.3s;
}

.album img {
  width: 100%;
  background: white;
  padding-bottom: 20px;
}

.album-title {
  padding-top: 10px;
  font-family: "Lato";
  letter-spacing: 2px;
  line-height: 25px;
  color: white;
}

.italics {
  font-style: italic;
  font-weight: 900;
  color: white;
  letter-spacing: 2px;
  font-family: "Lato";
}

.album:hover h3 {
  background: rgba(0, 0, 255, 0) !important;
}

.album:hover span {
  background: rgba(0, 0, 255, 0);
}

/* Video Section */

.video-section {
  padding: 20px 30px 30px 30px;
  margin: 0;
  width: auto;
  height: fit-content;
  border: solid white 2px;
  display: flex;
  flex-direction: column;
  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
    black -2px 0px 1px;
}
/* ... */

